test/libhyperion/syntaxTests/denominations/invalid_denomination_on_bool.hyp
contract C {
	bool constant x = true zond;
}
// ----
// ParserError 2314: (37-41): Expected ';' but got 'zond'
